--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@svgr/webpack": "^8.1.0",
         "@types/node": "^20.10.0",
         "@types/react": "^18.2.38",
+        "@types/react-dom": "^18.2.18",
         "@types/webpack": "^5.28.5",
         "@types/webpack-bundle-analyzer": "^4.6.3",
         "@types/webpack-dev-server": "^4.7.2",
@@ -44,6 +45,7 @@
     "dependencies": {
         "classnames": "^2.3.2",
         "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "react-icons": "^4.12.0"
     }
 }
