--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     },
     "dependencies": {
         "classnames": "^2.3.2",
+        "nanoid": "^5.0.5",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-icons": "^4.12.0"
